--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@prisma/client": "^6.19.1",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "prisma": "^6.19.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "react-i18next": "^16.5.0",
     "resend": "^6.6.0"
   },
   "devDependencies": {
