--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^6.19.1",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
+    "framer-motion": "^11.11.17",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "next": "16.0.10",
