--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "next": "16.0.10",
     "next-auth": "^5.0.0-beta.30",
+    "openai": "^4.77.0",
     "prisma": "^6.19.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
